--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,33 @@
-<p>home works!</p>
+<header class="header">
+
+    <div class="nav">
+        <div class="logo">
+            <h1>Logo</h1>
+        </div>
+        <div class="menu1">
+            <ul class="menu1-items">
+                <li>about us</li>
+                <li>blog</li>
+                <li>contact us</li>
+            </ul>
+        </div>
+        <div class="menu2">
+            <ul class="menu2-items">
+                <li><i class="fa fa-search" aria-hidden="true"></i></li>
+                <li><i class="fa fa-whatsapp" aria-hidden="true"></i></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="call-action">
+        <h1>Gimme Pizza</h1>
+    </div>
+
+    <div class="img">
+        <img class="img" src="../../assets/pitas.png" alt="">
+    </div>
+
+    <div class="left"></div>
+    <div class="middle"></div>
+    <div class="right"></div>
+</header>
